--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@react-spring/web": "^9.7.5",
+    "aos": "^3.0.0-beta.6",
     "heroicons": "^2.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
